// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Size container renders correctly with height unit aspect ratio & any width 1`] = `
<DocumentFragment>
  <div
    class="class-name size-box"
    style="width: 68%; padding-top: 29.142857142857142%; background-color: aqua;"
    tabindex="1"
  >
    <div
      class="size-box-inner class-name-inner"
    >
      <span>
        Child
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Size container renders correctly with height unit aspect ratio 1:1 1`] = `
<DocumentFragment>
  <div
    class="class-name size-box"
    style="width: 100%; padding-top: 100%; background-color: aqua;"
    tabindex="1"
  >
    <div
      class="size-box-inner class-name-inner"
    >
      <span>
        Child
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Size container renders correctly with height unit aspect ratio 3:2 1`] = `
<DocumentFragment>
  <div
    class="class-name size-box"
    style="width: 100%; padding-top: 66.66666666666666%; background-color: aqua;"
    tabindex="1"
  >
    <div
      class="size-box-inner class-name-inner"
    >
      <span>
        Child
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Size container renders correctly with height unit aspect ratio 4:3 1`] = `
<DocumentFragment>
  <div
    class="class-name size-box"
    style="width: 100%; padding-top: 75%; background-color: aqua;"
    tabindex="1"
  >
    <div
      class="size-box-inner class-name-inner"
    >
      <span>
        Child
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Size container renders correctly with height unit aspect ratio 16:9 1`] = `
<DocumentFragment>
  <div
    class="class-name size-box"
    style="width: 100%; padding-top: 56.25%; background-color: aqua;"
    tabindex="1"
  >
    <div
      class="size-box-inner class-name-inner"
    >
      <span>
        Child
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Size container renders correctly with height unit aspect ratio 21:9 1`] = `
<DocumentFragment>
  <div
    class="class-name size-box"
    style="width: 100%; padding-top: 42.857142857142854%; background-color: aqua;"
    tabindex="1"
  >
    <div
      class="size-box-inner class-name-inner"
    >
      <span>
        Child
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Size container renders correctly with height unit percentage of parent 1`] = `
<DocumentFragment>
  <div
    class="class-name size-box"
    style="width: 100%; padding-top: 0px; height: 25%; background-color: aqua;"
    tabindex="1"
  >
    <div
      class="size-box-inner class-name-inner"
    >
      <span>
        Child
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Size container renders correctly with height unit percentage of width 1`] = `
<DocumentFragment>
  <div
    class="class-name size-box"
    style="width: 100%; padding-top: 25%; background-color: aqua;"
    tabindex="1"
  >
    <div
      class="size-box-inner class-name-inner"
    >
      <span>
        Child
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Size container renders correctly with height unit pixels 1`] = `
<DocumentFragment>
  <div
    class="class-name size-box"
    style="width: 100%; padding-top: 25px; background-color: aqua;"
    tabindex="1"
  >
    <div
      class="size-box-inner class-name-inner"
    >
      <span>
        Child
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Size container renders correctly with pixel width & height unit aspect ratio 1`] = `
<DocumentFragment>
  <div
    class="class-name size-box"
    style="width: 100px; padding-top: 42.857142857142854px; background-color: aqua;"
    tabindex="1"
  >
    <div
      class="size-box-inner class-name-inner"
    >
      <span>
        Child
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Size container renders correctly with pixel width & height unit percentage of width 1`] = `
<DocumentFragment>
  <div
    class="class-name size-box"
    style="width: 100px; padding-top: 25px; background-color: aqua;"
    tabindex="1"
  >
    <div
      class="size-box-inner class-name-inner"
    >
      <span>
        Child
      </span>
    </div>
  </div>
</DocumentFragment>
`;
